--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hi Mom!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>This is a short description about myself. I am passionate about coding and technology.</p>
+        </section>
+        <section>
+            <h2>Projects</h2>
+            <p>Here are some of my recent projects.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 <a href="https://github.com/<your-username>"><your-username></a></p>
+    </footer>
+</body>
+</html>
+
