--- a/index.html
+++ b/index.html
@@ -3,34 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Sofian's Personal Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Sofian</h1>
     </header>
     <main>
-        <section>
-            <h2>About Me</h2>
-            <p>This is a short description about myself. I am passionate about coding and technology.</p>
-        </section>
-        <section>
-            <h2>Projects</h2>
-            <p>Here are some of my recent projects.</p>
-        </section>
+        <p>Find me on <a href="https://x.com/sofianxyz" class="link" target="_blank">X</a> and <a href="https://github.com/0xfa1z" class="link" target="_blank">Github</a></p>
+        <p>You can contact me here: <a href="mailto:contact@sofian.xyz" class="link">contact@sofian.xyz</a></p>
+        <p>Do not hesitate to reach out.</p>
     </main>
     <footer>
-        <p>&copy; 2024 <a href="https://github.com/<your-username>"><your-username></a></p>
+        <p>&copy; 2024</p>
     </footer>
 </body>
 </html>
-
